syntax = "proto3";

package buffed.actor;

import "buffed/user.proto";
import "buffed/org_member.proto";
import "buffed/role.proto";

message CredentialsBuf {
    string email = 1;
    string password = 2;
}

message SwitchAuthContextBuf {
    int32 org_id = 1;
}

message ActorBuf {
    int32 id = 1;
    int32 org_id = 2;
    int32 org_count = 3;
    string scope = 4;
    buffed.dto.UserBuf user = 5;
    repeated buffed.role.RoleTypeBuf roles = 6;
    repeated buffed.role.PermissionTypeBuf permissions = 7;
}

message AuthResponseBuf {
    buffed.dto.UserBuf user = 1;
    string token = 2;
    int32 org_id = 3;
    int32 org_count = 4;
}
