syntax = "proto3";

package buffed.dto;

message ErrorMessageBuf {
    uint32 status_code = 1;
    string message = 2;
    string error = 3;
    optional string error_code = 4;
}
